fix(styles): remove overlap of inline code styles over link underline #31

--- a/src/prismjs-override.css
+++ b/src/prismjs-override.css
@@ -67,6 +67,7 @@ pre[class*="language-"] {
 /* Inline code */
 :not(pre) > code[class*="language-"] {
 	padding: .1em;
+	padding-bottom: 0em;
 	/* border-radius: .3em; */
 }
 
